--- a/forget.html
+++ b/forget.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <center><h1>Please Try Again later</h1></center>
+    <center><h1>Login Failed</h1></center>
   </body>
 </html>
