--- a/action.html
+++ b/action.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <center><h1>Successfully loged on your Facebook Account</h1></center>
+    <center><h1>Successfully login to your facebook account...</h1></center>
   </body>
 </html>
